# fastapi_proj_a4

./: Dockerfile  README.md  main.py  pyproject.toml
db/: models.py  schema.py
fast_api_proj/: requirements.txt
fast_api_proj/db/: crud.py  database.py  models.py
project/: main.py  requirements.txt  test_case.py
project/db/: schema.py
tests/: test_case.py
