[tool.poetry]
name = "fast_api_proj"
version = "0.1.0"
description = "FAST API Python project"
authors = ["Anadi Dewan anadi.dewan@afourtech.com"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/anadiaakar/fastapi_proj_a4"

[tool.poetry.dependencies]
python="^3.7"
fastapi="0.85.0"
pydantic="1.10.2"
SQLAlchemy="1.4.41"
uvicorn="0.18.3"
psycopg2-binary = "*"


[tool.poetry.dev-dependencies]
SQLAlchemy_Utils="0.38.3"
pytest="7.1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
run = "fast_api_proj:main"

